--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -73,13 +73,22 @@ $breakpoint-l: 1024px;
 }
 
 .shimmers {
-  margin-top: 30px;
+  padding-top: 30px;
   display: flex;
   flex-flow: column nowrap;
+  background-image: linear-gradient(45deg, #808080 25%, transparent 25%), linear-gradient(-45deg, #808080 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #808080 75%), linear-gradient(-45deg, transparent 75%, #808080 75%);
+  background-size: 20px 20px;
+  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
 }
 
 .shimmer {
   cursor: pointer;
+  transition: 200ms;
+  &:hover {
+    outline: 1px rgb(63,81,181) dashed;        
+    transform: scale(1.05);
+    transition: 200ms;
+  }
 }
 
 .help-btn {
