--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -68,7 +68,7 @@ $breakpoint-l: 1024px;
     margin-top: 30px;
   }
   &__code {
-   
+    margin-top: 30px;
     pre {
       background: #333;
       color: lime;
